--- a/app/design/frontend/base/default/template/customer/account/navigation.phtml
+++ b/app/design/frontend/base/default/template/customer/account/navigation.phtml
@@ -16,15 +16,15 @@
         <?= $this->__('My Account') ?>
     </label>
     <div class="block-content">
-        <ul>
+        <ul class="nav-account">
             <?php $links = $this->getLinks(); ?>
             <?php foreach ($links as $link): ?>
-                <li <?= $this->isActive($link) ? 'class="current"' : '' ?>>
-                    <a href="<?= $link->getUrl() ?>"><?= $link->getLabel() ?></a>
+                <li <?= $this->isActive($link) ? 'class="current level0"' : 'class="level0"' ?>>
+                    <a href="<?= $link->getUrl() ?>" class="level0"><?= $link->getLabel() ?></a>
                 </li>
             <?php endforeach ?>
-            <li>
-                <a href="<?= Mage::helper('customer')->getLogoutUrl() ?>"><?= $this->__('Logout') ?></a>
+            <li class="level0">
+                <a href="<?= Mage::helper('customer')->getLogoutUrl() ?>" class="level0"><?= $this->__('Logout') ?></a>
             </li>
         </ul>
     </div>
