--- a/app/design/frontend/base/default/template/customer/account/navigation.phtml
+++ b/app/design/frontend/base/default/template/customer/account/navigation.phtml
@@ -12,9 +12,9 @@
 /** @var Mage_Customer_Block_Account_Navigation $this */
 ?>
 <div class="block block-account">
-    <label for="sidebar-toggle" class="block-title sidebar-trigger-label">
+    <button class="block-title sidebar-trigger">
         <?= $this->__('My Account') ?>
-    </label>
+    </button>
     <div class="block-content">
         <ul class="nav-account">
             <?php $links = $this->getLinks(); ?>
