--- a/app/design/frontend/base/default/template/customer/account/sidebar-toggle.phtml
+++ b/app/design/frontend/base/default/template/customer/account/sidebar-toggle.phtml
@@ -3,23 +3,15 @@
  * Maho
  *
  * @package     base_default
- * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
- * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<!-- Offcanvas sidebar toggle for customer account pages -->
-<input type="checkbox" id="sidebar-toggle" class="sidebar-toggle">
-
-<!-- Offcanvas sidebar overlay and panel -->
-<div class="sidebar-overlay">
-    <label for="sidebar-toggle"></label>
-</div>
+<div class="sidebar-overlay"></div>
 <div class="sidebar-offcanvas">
     <div class="sidebar-offcanvas-header">
         <h2 class="sidebar-offcanvas-title"></h2>
-        <label for="sidebar-toggle" class="sidebar-close">&times;</label>
+        <button class="sidebar-close" aria-label="<?= $this->__('Close') ?>">&times;</button>
     </div>
     <!-- All sidebar content will be moved here by JavaScript -->
 </div>
