--- a/app/design/frontend/base/default/template/customer/account/sidebar-toggle.phtml
+++ b/app/design/frontend/base/default/template/customer/account/sidebar-toggle.phtml
@@ -6,6 +6,8 @@
  * @copyright   Copyright (c) 2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/** @var Mage_Core_Block_Template $this */
 ?>
 <div class="sidebar-overlay"></div>
 <div class="sidebar-offcanvas">
