--- a/app/design/adminhtml/default/default/template/widget/grid.phtml
+++ b/app/design/adminhtml/default/default/template/widget/grid.phtml
@@ -163,7 +163,7 @@ $numColumns = count($this->getColumns());
         <?php endforeach ?>
         </tr>
 
-    <?php if (is_iterable($_multipleRows = $this->getMultipleRows($_item))): ?>
+    <?php if (is_iterable($multipleRows = $this->getMultipleRows($item))): ?>
     <?php foreach ($multipleRows as $i): ?>
         <tr>
         <?php $i = 0; foreach ($this->getMultipleRowColumns($i) as $column): ?>
