--- a/app/design/frontend/base/default/template/page/html/offcanvas.phtml
+++ b/app/design/frontend/base/default/template/page/html/offcanvas.phtml
@@ -9,7 +9,7 @@
 
 /** @var Mage_Core_Block_Template $this */
 ?>
-<dialog class="offcanvas" id="offcanvas-dialog">
+<dialog id="offcanvas">
     <div class="offcanvas-header">
         <h2 class="offcanvas-title"></h2>
         <button class="offcanvas-close" aria-label="<?= $this->__('Close') ?>" type="button">&times;</button>
